--- a/themes/babelium/css/forms.css
+++ b/themes/babelium/css/forms.css
@@ -91,7 +91,7 @@ input[type=button]:hover:enabled, button:hover:enabled
 	background: -ms-linear-gradient(top, white, #BFDCE3);
 }
 
-input[type=button].upload, button.upload
+input[type=button].upload, button.upload, button.cancel
 {
 	/** Gradient for mozilla and webkit powered **/
 	background: -webkit-gradient(linear, 0 0, 0 100%, from(#AB0D0D), to(#F13737));
@@ -103,7 +103,7 @@ input[type=button].upload, button.upload
 	border-color: #630707;
 }
 
-input[type=button].upload:hover, button.upload:hover
+input[type=button].upload:hover, button.upload:hover, button.cancel:hover
 {
 	text-shadow: 1px 1px 1px rgba(0,0,0,.2);	
 	
@@ -116,7 +116,7 @@ input[type=button].upload:hover, button.upload:hover
 	border-color: #D95700;
 }
 
-input[type=submit].bigBlueButton, input[type=reset].bigBlueButton, submit.bigBlueButton, reset.bigBlueButton
+input[type=submit].bigBlueButton, input[type=reset].bigBlueButton, submit.bigBlueButton, reset.bigBlueButton, button.bigBlueButton
 {
 	color: #FFFFFF;
 	font-weight: bold;
@@ -146,7 +146,7 @@ input[type=submit].bigBlueButton, input[type=reset].bigBlueButton, submit.bigBlu
 	box-shadow: 0px 0px 4px 1px #666;
 }
 
-input[type=submit].bigBlueButton:hover, input[type=reset].bigBlueButton:hover, submit.bigBlueButton:hover, reset.bigBlueButton:hover
+input[type=submit].bigBlueButton:hover, input[type=reset].bigBlueButton:hover, submit.bigBlueButton:hover, reset.bigBlueButton:hover, , button.bigBlueButton:hover
 {
 	background-color: #fffff;
 
