Applied the latest changes of the main branch to this branch

--- a/src/babeliumPlayer.mxml
+++ b/src/babeliumPlayer.mxml
@@ -5,8 +5,6 @@
 			   xmlns:videoPlayer="modules.videoPlayer.*"
 			   xmlns:control="control.*"
 			   preinitialize="init()"
-			   width="500"
-			   height="400"
 			   creationComplete="complete()">
 	
 	<s:layout>
@@ -132,8 +130,8 @@
 									subtitles="true"
 									autoScale="false"
 									arrows="false"
-									width="500"
-									height="{VP.width * 10 / 16}"
+									width="{appWidth}"
+									height="{appHeight-20}"
 									subtitlingControls="false"
 									streamSource="{DataModel.getInstance().streamingResourcesPath}"
 									controlsEnabled="true"/>
